--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 body {
-  background-image: url('/media/background-puma.jpg');
+  background-image: url("./media/background-puma.jpg");
   margin: 0;
   height: 100%;
   width: auto;
@@ -69,14 +69,14 @@ body {
   text-align: center;
   font-size: 2em;
   margin-top: 4%;
-  font-family: 'roboto', sans-serif;
+  font-family: "roboto", sans-serif;
   font-weight: bold;
   z-index: 1;
 }
 
 #firstText,
 #secondText {
-  font-family: 'roboto', sans-serif;
+  font-family: "roboto", sans-serif;
   font-weight: bold;
   color: white;
   text-align: center;
